...
                android:orientation="vertical"
                >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="250dp">
                        <ImageView
                            android:id="@+id/tv_detail_backdrop"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_refresh_black_24dp"
                            app:layout_collapseMode="pin"
                            app:layout_collapseParallaxMultiplier="0.7"

                            android:contentDescription="@string/tv_show_backdrop" />

                        <TextView
                            android:id="@+id/tv_show_detail_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="12dp"
                            android:paddingTop="12dp"
                            android:paddingEnd="12dp"
                            android:shadowColor="#000000"
...
                            android:text="@string/overview"
                            android:textSize="16sp"
                            android:textColor="#050505"
                            android:textStyle="bold|italic"/>
                        <TextView
                            android:layout_marginTop="5dp"
                            android:id="@+id/tv_show_detail_overview"
                            android:layout_width="match_parent"
                            android:textSize="16sp"
                            android:textColor="#1a1a1a"
                            android:layout_height="wrap_content"
                            tools:text="@string/overview"/>
                    </LinearLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:fabCustomSize="60dp"
        android:backgroundTint="#ccc"
...
