...
                android:orientation="vertical"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp">
                    <ImageView
                        android:id="@+id/movie_detail_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_refresh_black_24dp"
                        app:layout_collapseMode="pin"
                        app:layout_collapseParallaxMultiplier="0.7"
                        android:contentDescription="@string/movie_backdrop" />

                    <TextView
                        android:id="@+id/movie_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="12dp"
                        android:shadowColor="#000000"
...
                                    android:text="@string/overview"
                                    android:textColor="#050505"
                                    android:textSize="16sp"
                                    android:textStyle="bold|italic" />

                                <TextView
                                    android:id="@+id/movie_detail_overview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:textColor="#1a1a1a"
                                    android:textSize="16sp"
                                    tools:text="@string/overview" />
...
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#ccc"
        app:backgroundTint="#aaa"
...
