<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_movie_black_24dp"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/tv_show" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_on"
        android:title="@string/favorite" />
</menu>
